grammar.txt
main                : body

body                : (NEWLINE* expr NEWLINE+)* END

controls            : KW:if expr NEWLINE* LBRACE body RBRACE
                        (NEWLINE* KW:elseif expr NEWLINE* LBRACE body RBRACE)*
                        (NEWLINE* KW:else body)?

expr                : keyword

keyword             : KW:wln expr
                    : KW:w expr
                    : KW:rei expr
                    : KW:rech expr
                    : KW:rek expr
                    : KW:if expr KW:then expr KW:else expr
                    : KW:cpy term COMMA expr

term                : DOT factor
                    : factor

factor              : INT|STRING
                    : LPAREN expr RPAREN
                    : PLUS|MINUS factor
                    : MUL factor
